--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mensageiro da Infidelidade</title>
-    <link href="output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet" />
 
     <style>
       .animated-gradient {
@@ -58,7 +58,7 @@
       class="bg-rose-200 p-8 rounded-lg shadow-[10px_20px_20px_1px_black] max-w-sm w-full mx-4"
     >
       <h1 class="text-2xl font-bold text-pink-600 mb-6">
-        Mensageiro da Infidelidade
+        Mensageiro da Infidelidade (testando pra saber se é pasta certa)
       </h1>
       <form id="formEmail" class="space-y-4" enctype="multipart/form-data">
         <!-- Campo para o e-mail do destinatário -->
@@ -140,4 +140,3 @@
     <script src="script.js" defer></script>
   </body>
 </html>
-
